[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Tiles/tile_0470.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles/tile_0472.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tiles/tile_0471.png" type="Texture" id=3]
[ext_resource path="res://SpiderEnemy.gd" type="Script" id=4]
[ext_resource path="res://Assets/Tiles/tile_0473.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.84282, 7.10913 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "standing",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

[node name="SpiderEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2147483650
collision_mask = 5
script = ExtResource( 4 )

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "standing"
playing = true

[node name="TintTween" type="Tween" parent="AnimatedSprite"]

[node name="FloorRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 8, 16 )
collision_mask = 4
collide_with_areas = true

[node name="WallRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 4
collide_with_areas = true

[node name="HitCollision" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
collision_layer = 0

[node name="HitCollisionShape" type="CollisionShape2D" parent="HitCollision"]
position = Vector2( 0, 3.3 )
shape = SubResource( 3 )
[connection signal="timeout" from="DyingTimer" to="." method="_on_DyingTimer_timeout"]
[connection signal="area_entered" from="HitCollision" to="." method="_on_HitCollision_area_entered"]
